apollo-federation/src/connectors/snapshots/apollo_federation__connectors__url_template__test_parse__url_path_template_parse.snap
---
source: apollo-federation/src/connectors/url_template.rs
expression: "URLTemplate::from_str(\"/users/{$config.user_id}?a=b\")"
---
Ok(
    URLTemplate {
        base: None,
        path: [
            StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "users",
                            location: 1..6,
                        },
                    ),
                ],
            },
            StringTemplate {
                parts: [
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $config,
                                                range: Some(
                                                    0..7,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "user_id",
                                                        ),
                                                        range: Some(
                                                            8..15,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            15..15,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    7..15,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..15,
                                        ),
                                    },
                                },
                            ),
                            location: 8..23,
                        },
                    ),
                ],
            },
        ],
        query: [
            (
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "a",
                                location: 25..26,
                            },
                        ),
                    ],
                },
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "b",
                                location: 27..28,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
